fix(onboarding): lower the z-index so WP popups have priority

--- a/assets/styles/onboarding.scss
+++ b/assets/styles/onboarding.scss
@@ -21,7 +21,7 @@
 		min-width: 250px;
 		max-width: 345px;
 		box-shadow: 2px 2px 8px 4px rgba(30, 30, 30, 0.12);
-		z-index: 1000000000;
+		z-index: 100099;
 		position: fixed;
 		top: 0;
 		right: 0;
